try fix search-panel visible

--- a/src/styles/expressive-code.css
+++ b/src/styles/expressive-code.css
@@ -1,9 +1,9 @@
 .expressive-code {
-    .frame {
-        @apply !shadow-none;
-    }
+  .frame {
+    @apply !shadow-none;
+  }
 
-    .title {
-        font-family: 'Maple Mono Normal Medium', 'HarmonyOS Sans SC Medium';
-    }
+  .title {
+    font-family: "Maple Mono Normal Medium";
+  }
 }
