--- a/src/styles/variables.styl
+++ b/src/styles/variables.styl
@@ -27,6 +27,8 @@ define({
   --page-bg: oklch(0.95 0.01 var(--hue)) oklch(0.16 0.014 var(--hue))
   --card-bg: white oklch(0.23 0.015 var(--hue))
 
+  --blockquote-bg: unquote('oklch(0.95 0.01 var(--hue) / 0.5)') unquote('oklch(0.16 0.014 var(--hue) / 0.04)')
+
   --btn-content: oklch(0.55 0.12 var(--hue)) oklch(0.75 0.1 var(--hue))
 
   --btn-regular-bg: oklch(0.95 0.025 var(--hue)) oklch(0.33 0.035 var(--hue))
